--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "spacecraftapp",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.4",
+    "@angular/cli": "^11.0.4",
     "@angular/common": "~11.0.4",
     "@angular/compiler": "~11.0.4",
+    "@angular/compiler-cli": "^11.0.4",
     "@angular/core": "~11.0.4",
     "@angular/forms": "~11.0.4",
     "@angular/platform-browser": "~11.0.4",
@@ -23,14 +25,16 @@
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "~11.0.4",
-    "@angular/compiler-cli": "~11.0.4",
+    "@angular/cli": "^11.0.4",
+    "@angular/compiler-cli": "^11.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
