--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.5.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.14.0",
     "tslib": "^2.0.0",
     "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
